[gd_scene load_steps=11 format=2]

[ext_resource path="res://UI/display.png" type="Texture" id=1]
[ext_resource path="res://Fonts/slkscr.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://MainMenu.gd" type="Script" id=3]
[ext_resource path="res://Fonts/slkscrb.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]
size = 60
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 38
font_data = ExtResource( 4 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 90, 90 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 90, 90 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 70, 20 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 120, 20 )

[node name="MainMenu" type="Node2D"]
script = ExtResource( 3 )

[node name="title" type="Label" parent="."]
margin_left = 1.99652
margin_top = 41.1766
margin_right = 1079.0
margin_bottom = 128.177
custom_fonts/font = SubResource( 1 )
custom_colors/font_outline_modulate = Color( 0.701961, 0.898039, 0.623529, 1 )
text = "Pixel Party"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="starttext" type="Label" parent="."]
margin_left = 275.734
margin_top = 326.589
margin_right = 494.734
margin_bottom = 407.589
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Start 
"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="starttext2" type="Label" parent="."]
margin_left = 586.156
margin_top = 324.47
margin_right = 805.156
margin_bottom = 405.47
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Setup
"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="starttext3" type="Label" parent="."]
margin_left = 850.148
margin_top = 466.774
margin_right = 1069.15
margin_bottom = 631.774
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Exit
Rules
Credits
"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartServer" type="TouchScreenButton" parent="."]
position = Vector2( 383.813, 343.779 )
z_index = 2
shape = SubResource( 3 )
shape_centered = false

[node name="Settings" type="TouchScreenButton" parent="."]
position = Vector2( 694.516, 337.63 )
z_index = 2
shape = SubResource( 4 )
shape_centered = false

[node name="Exit" type="TouchScreenButton" parent="."]
position = Vector2( 1004.99, 486.284 )
shape = SubResource( 5 )
shape_centered = false

[node name="starticon" type="Sprite" parent="."]
position = Vector2( 386.195, 342.879 )
scale = Vector2( 0.121, 0.121 )
texture = ExtResource( 1 )

[node name="setupicon" type="Sprite" parent="."]
position = Vector2( 599.008, 262.074 )
scale = Vector2( 0.12136, 0.12136 )
texture = ExtResource( 1 )
offset = Vector2( 764.678, 656.542 )

[node name="Credits" type="TouchScreenButton" parent="."]
position = Vector2( 852.577, 549.368 )
shape = SubResource( 6 )
[connection signal="pressed" from="StartServer" to="." method="_on_Host_pressed"]
[connection signal="pressed" from="Settings" to="." method="_on_Setup_pressed"]
[connection signal="pressed" from="Exit" to="." method="_on_Exit_pressed"]
[connection signal="pressed" from="Credits" to="." method="_on_Credits_pressed"]
